--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,23 +2,18 @@
   "name": "Valu App",
   "short_name": "Valu",
   "description": "Your Valu application",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "orientation": "portrait-primary",
+  "orientation": "portrait",
   "scope": "/",
   "icons": [
     {
-      "src": "/assets/images/icon.png",
+      "src": "assets/images/icon.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "/assets/images/favicon.png",
-      "sizes": "48x48",
-      "type": "image/png"
     }
   ]
 }
