--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.3",
+    "expo-safe-area-context": "5.0.1",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
