--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.3",
-    "expo-safe-area-context": "5.0.1",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
@@ -51,7 +50,7 @@
     "react-native": "0.79.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "5.3.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
