--- a/package.json
+++ b/package.json
@@ -9,38 +9,53 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@ai-sdk/react": "^2.0.76",
-    "@clerk/backend": "^2.18.3",
-    "@clerk/clerk-expo": "^2.17.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@hono/trpc-server": "^0.4.0",
-    "@nkzw/create-context-hook": "^1.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.6",
-    "@stardazed/streams-text-encoding": "^1.0.2",
-    "@tanstack/eslint-plugin-query": "^5.91.2",
-    "@tanstack/react-query": "^5.90.5",
-    "@trpc/client": "^11.6.0",
-    "@trpc/react-query": "^11.6.0",
-    "@trpc/server": "^11.6.0",
-    "@ungap/structured-clone": "^1.3.0",
+    "@ai
+-sdk/react": "^2.0.76",
+    "@clerk
+/backend": "^2.18.3",
+    "@clerk
+/clerk-expo": "^2.17.0",
+    "@expo
+/vector-icons": "^14.1.0",
+    "@hono
+/trpc-server": "^0.4.0",
+    "@nkzw
+/create-context-hook": "^1.1.0",
+    "@react
+-native-async-storage/async-storage": "2.1.2",
+    "@react
+-navigation/native": "^7.1.6",
+    "@stardazed
+/streams-text-encoding": "^1.0.2",
+    "@tanstack
+/eslint-plugin-query": "^5.91.2",
+    "@tanstack
+/react-query": "^5.90.5",
+    "@trpc
+/client": "^11.6.0",
+    "@trpc
+/react-query": "^11.6.0",
+    "@trpc
+/server": "^11.6.0",
+    "@ungap
+/structured-clone": "^1.3.0",
     "expo": "^53.0.4",
-    "expo-blur": "~14.1.4",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.4",
-    "expo-font": "~13.3.0",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-location": "~18.1.4",
-    "expo-router": "~5.0.3",
-    "expo-secure-store": "~14.2.4",
-    "expo-splash-screen": "~0.30.7",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.6",
+    "expo-blur": "14.1.4",
+    "expo-camera": "16.1.11",
+    "expo-constants": "17.1.4",
+    "expo-font": "13.3.0",
+    "expo-haptics": "14.1.4",
+    "expo-image": "2.1.6",
+    "expo-image-picker": "16.1.4",
+    "expo-linear-gradient": "14.1.4",
+    "expo-linking": "7.1.4",
+    "expo-location": "18.1.4",
+    "expo-router": "5.0.3",
+    "expo-secure-store": "14.2.4",
+    "expo-splash-screen": "0.30.7",
+    "expo-status-bar": "2.2.3",
+    "expo-symbols": "0.4.4",
+    "expo-system-ui": "5.0.6",
     "expo-web-browser": "^15.0.8",
     "hono": "^4.10.1",
     "lucide-react-native": "^0.475.0",
@@ -48,10 +63,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "5.6.0",
+    "react-native-screens": "4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
@@ -60,12 +75,19 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@expo/ngrok": "^4.1.0",
-    "@types/react": "~19.0.10",
+    "@babel
+/core": "^7.25.2",
+    "@expo
+/ngrok": "^4.1.0",
+    "@types
+/react": "19.0.10",
     "eslint": "9.31.0",
     "eslint-config-expo": "9.2.0",
     "typescript": "~5.8.3"
   },
+  "overrides": {
+    "ajv": "^8.12.0"
+  },
   "private": true
 }
+
