--- a/package.json
+++ b/package.json
@@ -9,36 +9,21 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@ai
--sdk/react": "^2.0.76",
-    "@clerk
-/backend": "^2.18.3",
-    "@clerk
-/clerk-expo": "^2.17.0",
-    "@expo
-/vector-icons": "^14.1.0",
-    "@hono
-/trpc-server": "^0.4.0",
-    "@nkzw
-/create-context-hook": "^1.1.0",
-    "@react
--native-async-storage/async-storage": "2.1.2",
-    "@react
--navigation/native": "^7.1.6",
-    "@stardazed
-/streams-text-encoding": "^1.0.2",
-    "@tanstack
-/eslint-plugin-query": "^5.91.2",
-    "@tanstack
-/react-query": "^5.90.5",
-    "@trpc
-/client": "^11.6.0",
-    "@trpc
-/react-query": "^11.6.0",
-    "@trpc
-/server": "^11.6.0",
-    "@ungap
-/structured-clone": "^1.3.0",
+    "@ai-sdk/react": "^2.0.76",
+    "@clerk/backend": "^2.18.3",
+    "@clerk/clerk-expo": "^2.17.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@hono/trpc-server": "^0.4.0",
+    "@nkzw/create-context-hook": "^1.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^7.1.6",
+    "@stardazed/streams-text-encoding": "^1.0.2",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/react-query": "^5.90.5",
+    "@trpc/client": "^11.6.0",
+    "@trpc/react-query": "^11.6.0",
+    "@trpc/server": "^11.6.0",
+    "@ungap/structured-clone": "^1.3.0",
     "expo": "^53.0.4",
     "expo-blur": "14.1.4",
     "expo-camera": "16.1.11",
