--- a/package.json
+++ b/package.json
@@ -60,12 +60,9 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@babel
-/core": "^7.25.2",
-    "@expo
-/ngrok": "^4.1.0",
-    "@types
-/react": "19.0.10",
+    "@babel/core": "^7.25.2",
+    "@expo/ngrok": "^4.1.0",
+    "@types/react": "19.0.10",
     "eslint": "9.31.0",
     "eslint-config-expo": "9.2.0",
     "typescript": "~5.8.3"
