--- a/package.json
+++ b/package.json
@@ -63,12 +63,11 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "19.0.10",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "eslint": "9.31.0",
     "eslint-config-expo": "9.2.0",
     "typescript": "~5.8.3"
-  },
-  "overrides": {
-    "ajv": "^8.12.0"
   },
   "private": true
 }
