--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/server": "^11.6.0",
     "@ungap/structured-clone": "^1.3.0",
     "expo": "^53.0.4",
+    "expo-auth-session": "6.0.0",
     "expo-blur": "14.1.4",
     "expo-camera": "16.1.11",
     "expo-constants": "17.1.4",
@@ -67,7 +68,7 @@
     "ajv-keywords": "^5.1.0",
     "eslint": "9.31.0",
     "eslint-config-expo": "9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "5.8.3"
   },
   "private": true
 }
