--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ CLERK_SECRET_KEY=sk_test_...
 
 # Google Sheets Integration
 # Your Google Spreadsheet ID (from the URL)
-GOOGLE_SPREADSHEET_ID=
+GOOGLE_SPREADSHEET_ID=13rPCEpFz-5oql6_5LVOVnkfJOC56h_xG5E5xxMssyCY
 
 # Authentication Method - Choose ONE of the following:
 
