--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2F2ZWQtbWFsYW11dGUtOTkuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_8cQe9En4dwW3wGSNoDdPCuneKF0BZFCqyZLqtyD9or
 GOOGLE_SERVICE_ACCOUNT_FILE=./secrets/google-service-account.json
+GOOGLE_SPREADSHEET_ID=13rPCEpFz-5oql6_5LVOVnkfJOC56h_xG5E5xxMssyCY
