Add SHEET_NAME_BRANDS to environment variables

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2F2ZWQtbWFsYW11dGUtOTkuY2xlcmsuYWNjb3
 CLERK_SECRET_KEY=sk_test_8cQe9En4dwW3wGSNoDdPCuneKF0BZFCqyZLqtyD9or
 GOOGLE_SPREADSHEET_ID=13rPCEpFz-5oql6_5LVOVnkfJOC56h_xG5E5xxMssyCY
 GOOGLE_SHEETS_API_KEY=AIzaSyC-CBJ-he8zLOu7iQTOD2FpYKwBvMNXZZo
+SHEET_NAME_BRANDS=brands
