Rename app to 'endorse' and update icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Upright",
-  "short_name": "Upright",
-  "description": "Upright - Vote With Your Money",
+  "name": "endorse",
+  "short_name": "endorse",
+  "description": "endorse - Vote With Your Money",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -10,12 +10,12 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/endo12.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/endo12.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
